# MutsukiAgentKit

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: performance-smoke.yml
artifacts/performance/reference-windows-x64/: report-analysis.json  report.approval.json  report.json
benchmarks/: workloads-v1.json
crates/mutsuki-agent-benchmarks/: Cargo.toml
crates/mutsuki-agent-benchmarks/src/: harness.rs  main.rs  measurement.rs
crates/mutsuki-agent-bundle/: Cargo.toml
crates/mutsuki-agent-bundle/src/: lib.rs
crates/mutsuki-agent-macros/: AGENTS.md  Cargo.toml
crates/mutsuki-agent-macros/src/: lib.rs
crates/mutsuki-agent-protocol/: AGENTS.md  Cargo.toml
crates/mutsuki-agent-protocol/src/: context.rs  error.rs  lib.rs  memory.rs  message.rs  model.rs  prompt.rs  resource.rs  run.rs  session.rs  stream.rs  tool.rs  usage.rs
crates/mutsuki-agent-sdk/: AGENTS.md  Cargo.toml
crates/mutsuki-agent-sdk/src/: agent_client.rs  agent_context.rs  lib.rs  memory_client.rs  message_builder.rs  model_client.rs  plugin.rs  prelude.rs  prompt_builder.rs  protocol.rs  resource.rs  task.rs  tool_builder.rs
crates/mutsuki-agent-testkit/: AGENTS.md  Cargo.toml
crates/mutsuki-agent-testkit/src/: benchmark.rs  conformance.rs  fake_memory.rs  fake_model.rs  fake_session.rs  fake_tool.rs  lib.rs
crates/mutsuki-plugin-agent-context/: Cargo.toml
crates/mutsuki-plugin-agent-context/src/: builder.rs  lib.rs  plugin.rs
crates/mutsuki-plugin-agent-loop/: AGENTS.md  Cargo.toml
crates/mutsuki-plugin-agent-loop/src/: lib.rs  loop.rs  plugin.rs
crates/mutsuki-plugin-agent-memory-router/: Cargo.toml
crates/mutsuki-plugin-agent-memory-router/src/: lib.rs  plugin.rs  query.rs
crates/mutsuki-plugin-agent-model-gateway/: Cargo.toml
crates/mutsuki-plugin-agent-model-gateway/src/: effect.rs  lib.rs  plugin.rs  provider.rs
crates/mutsuki-plugin-agent-prompt/: Cargo.toml
crates/mutsuki-plugin-agent-prompt/src/: lib.rs  plugin.rs  render.rs
crates/mutsuki-plugin-agent-session/: Cargo.toml
crates/mutsuki-plugin-agent-session/src/: lib.rs  plugin.rs  session.rs
crates/mutsuki-plugin-agent-tool-router/: AGENTS.md  Cargo.toml
crates/mutsuki-plugin-agent-tool-router/src/: lib.rs  plugin.rs  registry.rs
docs/: agent-loop.md  architecture.md  memory-router.md  migration.md  model-gateway.md  performance-model-issue4.md  prompt.md  protocol.md  rust-sdk.md  tool-router.md
examples/lilia-code-like-agent/: README.md
examples/memory-agent/: README.md
examples/rust-agent-tool/: Cargo.toml
examples/rust-agent-tool/src/: lib.rs
examples/rust-model-provider/: Cargo.toml
examples/rust-model-provider/src/: lib.rs
examples/simple-chat-agent/: Cargo.toml
examples/simple-chat-agent/src/: main.rs
examples/tool-agent/: README.md
manifests/: mutsuki-plugin-agent-context.toml  mutsuki-plugin-agent-loop.toml  mutsuki-plugin-agent-memory-router.toml  mutsuki-plugin-agent-model-gateway.toml  mutsuki-plugin-agent-prompt.toml  mutsuki-plugin-agent-session.toml  mutsuki-plugin-agent-tool-router.toml
schemas/agent-memory/: v1.schema.json
schemas/agent-message/: v1.schema.json
schemas/agent-model/: v1.schema.json
schemas/agent-model-http-effect/: v1.schema.json
schemas/agent-model-poll/: v1.schema.json
schemas/agent-profile/: v1.schema.json
schemas/agent-run/: v1.schema.json
schemas/agent-session/: v1.schema.json
schemas/agent-stream/: v1.schema.json
schemas/agent-tool/: v1.schema.json
scripts/: run-performance-model.py
skills/plugins/: SKILL.md
skills/protocol/: SKILL.md
skills/sdk/: SKILL.md
skills/testkit/: SKILL.md
templates/agent-plugin-bundle/: README.md
templates/agent-profile/: profile.toml
templates/rust-agent-tool/: Cargo.toml
templates/rust-agent-tool/src/: lib.rs
templates/rust-model-provider/: Cargo.toml
templates/rust-model-provider/src/: lib.rs
