[package]
name = "mutsuki-agent-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mutsuki-agent-protocol.workspace = true
mutsuki-agent-macros.workspace = true
mutsuki-runtime-sdk.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
