[package]
name = "mutsuki-agent-testkit"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mutsuki-agent-protocol.workspace = true
mutsuki-plugin-agent-loop = { path = "../mutsuki-plugin-agent-loop" }
mutsuki-plugin-agent-memory-router = { path = "../mutsuki-plugin-agent-memory-router" }
mutsuki-plugin-agent-model-gateway = { path = "../mutsuki-plugin-agent-model-gateway" }
mutsuki-plugin-agent-prompt = { path = "../mutsuki-plugin-agent-prompt" }
mutsuki-plugin-agent-session = { path = "../mutsuki-plugin-agent-session" }
mutsuki-plugin-agent-tool-router = { path = "../mutsuki-plugin-agent-tool-router" }
serde.workspace = true
serde_json.workspace = true
