[package]
name = "mutsuki-plugin-agent-context"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mutsuki-agent-protocol.workspace = true
mutsuki-agent-sdk.workspace = true
mutsuki-runtime-sdk.workspace = true
serde.workspace = true
serde_json.workspace = true
