[package]
name = "mutsuki-plugin-agent-model-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mutsuki-agent-protocol.workspace = true
mutsuki-agent-sdk.workspace = true
mutsuki-runtime-sdk.workspace = true
mutsuki-runtime-core.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio.workspace = true
